# gladstone

./: configure  configure.ac  log.txt
autom4te.cache/: output.2  requests  traces.0  traces.3  traces.3t
src/: Makefile.am  Makefile.in  gstg729enc.h
trunk/: Makefile.in  README
trunk/autom4te.cache/: output.0  output.1  output.3  traces.1  traces.2
trunk/m4/: Makefile.in  as-configure-opts.m4
trunk/src/: Makefile.am  gstg729dec.c  gstg729dec.h  gstg729enc.c  gstg729enc.h  gstg729plugin.c
wiki/: PageName.wiki
